--- a/.github/workflows/autocheck.yml
+++ b/.github/workflows/autocheck.yml
@@ -3,8 +3,8 @@ name: autocheck
 
 on:
   workflow_dispatch: # 手动触发
-  schedule: 
-    - cron: '0 9 * * *' # 北京时间17点05分
+#   schedule: 
+#     - cron: '0 9 * * *' # 北京时间17点05分
 
 jobs: 
   check: 
