--- a/.github/workflows/autocheck.yml
+++ b/.github/workflows/autocheck.yml
@@ -3,8 +3,8 @@ name: autocheck
 
 on:
   workflow_dispatch: # 手动触发
-  schedule: 
-  - cron: '0 0 * * *' # 北京时间08点
+  # schedule: 
+  # - cron: '0 0 * * *' # 北京时间08点
 
 jobs: 
   check: 
