--- a/.github/workflows/alpha_build_bv_without_sign.yml
+++ b/.github/workflows/alpha_build_bv_without_sign.yml
@@ -20,9 +20,9 @@ jobs:
 
       - name: Modify MainActivity.kt
         run: |
-          sed  's/isMainlandChina = NetworkUtil.isMainlandChina()/isMainlandChina = false/g'  app/src/main/kotlin/dev/aaa1115910/bv/activities/MainActivity.kt
-          sed  '/RegionBlockScreen()/d'  app/src/main/kotlin/dev/aaa1115910/bv/activities/MainActivity.kt
-          sed  '/} else if (isMainlandChina) {/d'  app/src/main/kotlin/dev/aaa1115910/bv/activities/MainActivity.kt
+          sed -i '' 's/isMainlandChina = NetworkUtil.isMainlandChina()/isMainlandChina = false/g' app/src/main/kotlin/dev/aaa1115910/bv/activities/MainActivity.kt
+          sed -i '' '/RegionBlockScreen()/d' app/src/main/kotlin/dev/aaa1115910/bv/activities/MainActivity.kt
+          sed -i '' '/} else if (isMainlandChina) {/d' app/src/main/kotlin/dev/aaa1115910/bv/activities/MainActivity.kt
 
 
       - name: Set up JDK 17
@@ -40,7 +40,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build apk
-        run: ./gradlew assembleDefaultAlpha assembleDefaultDebug
+        run: ./gradlew assembleDefaultAlpha #assembleDefaultDebug
 
       - name: Read alpha apk output metadata
         id: apk-meta-alpha
@@ -48,35 +48,35 @@ jobs:
         with:
           path: app/build/outputs/apk/default/alpha/output-metadata.json
 
-      - name: Read alpha debug apk output metadata
-        id: apk-meta-alpha-debug
-        uses: juliangruber/read-file-action@v1
-        with:
-          path: app/build/outputs/apk/default/debug/output-metadata.json
+      # - name: Read alpha debug apk output metadata
+      #   id: apk-meta-alpha-debug
+      #   uses: juliangruber/read-file-action@v1
+      #   with:
+      #     path: app/build/outputs/apk/default/debug/output-metadata.json
 
       - name: Parse apk infos
         id: apk-infos
         run: |
           echo "alpha_info_version_code=${{ fromJson(steps.apk-meta-alpha.outputs.content).elements[0].versionCode }}" >> $GITHUB_ENV
           echo "alpha_info_version_name=${{ fromJson(steps.apk-meta-alpha.outputs.content).elements[0].versionName }}" >> $GITHUB_ENV
-          echo "alpha_debug_info_version_code=${{ fromJson(steps.apk-meta-alpha-debug.outputs.content).elements[0].versionCode }}" >> $GITHUB_ENV
-          echo "alpha_debug_info_version_name=${{ fromJson(steps.apk-meta-alpha-debug.outputs.content).elements[0].versionName }}" >> $GITHUB_ENV
+          # echo "alpha_debug_info_version_code=${{ fromJson(steps.apk-meta-alpha-debug.outputs.content).elements[0].versionCode }}" >> $GITHUB_ENV
+          # echo "alpha_debug_info_version_name=${{ fromJson(steps.apk-meta-alpha-debug.outputs.content).elements[0].versionName }}" >> $GITHUB_ENV
 
-      # upload artifacts default-debug
+      # # upload artifacts default-debug
 
-      - name: Archive default debug build artifacts (universal)
-        uses: actions/upload-artifact@v4
-        with:
-          name: Default debug build artifact (universal)
-          path: app/build/outputs/apk/default/debug/BV_${{ env.alpha_debug_info_version_code }}_${{ env.alpha_debug_info_version_name }}_default_universal.apk
+      # - name: Archive default debug build artifacts (universal)
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: Default debug build artifact (universal)
+      #     path: app/build/outputs/apk/default/debug/BV_${{ env.alpha_debug_info_version_code }}_${{ env.alpha_debug_info_version_name }}_default_universal.apk
 
       # upload artifacts default-alpha
 
-      - name: Archive default alpha build mappings
-        uses: actions/upload-artifact@v4
-        with:
-          name: Default alpha build mappings
-          path: app/build/outputs/mapping/defaultAlpha
+      # - name: Archive default alpha build mappings
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: Default alpha build mappings
+      #     path: app/build/outputs/mapping/defaultAlpha
 
       - name: Archive default alpha build artifacts (universal)
         uses: actions/upload-artifact@v4
