--- a/.github/workflows/alpha_build_bv_with_sign.yml
+++ b/.github/workflows/alpha_build_bv_with_sign.yml
@@ -33,6 +33,18 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      - name: Add signing properties
+        env:
+          SIGNING_PROPERTIES: ${{ secrets.SIGNING_PROPERTIES }}
+        run: |
+          echo ${{ secrets.SIGNING_PROPERTIES }} > encoded_signing_properties
+          base64 -Dd -i encoded_signing_properties > signing.properties
+
+      - name: Add jks file
+        run: |
+          echo ${{ secrets.SIGN_KEY }} > ./encoded_key
+          base64 -Dd -i encoded_key > key.jks
+
       - name: Build apk
         run: ./gradlew assembleDefaultAlpha #assembleDefaultDebug
 
